# quartermaster

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  compose.yaml  deny.toml  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/scripts/: seed_smoke_data.py  smoke_ui.py
crates/qm-ai/: Cargo.toml
crates/qm-ai/src/: lib.rs
crates/qm-ai/tests/: openrouter_live.rs
crates/qm-api/: Cargo.toml
crates/qm-api/src/: auth.rs  barcode.rs  email.rs  error.rs  labels.rs  lib.rs  openfoodfacts.rs  quotas.rs  rate_limit.rs  types.rs
crates/qm-api/src/routes/: accounts.rs  ai.rs  devices.rs  health.rs  households.rs  ingredients.rs  join.rs  label_printers.rs  locations.rs  maintenance.rs  meal_plans.rs  mod.rs  onboarding.rs  pantry.rs  patch.rs  products.rs  recipes.rs  reminders.rs  replenishment.rs  stock.rs  storage_vessels.rs  suppliers.rs  units.rs
crates/qm-api/tests/: ai.rs  auth_cookies.rs  auth_passkeys_handoff.rs  auth_rate_limits.rs  auth_recovery.rs  barcode_lookup.rs  hardening_slice.rs  household_slice.rs  households.rs  ingredients.rs  invites.rs  join_links.rs  label_printers.rs  lifecycle_slice.rs  maintenance.rs  meal_plans.rs  onboarding.rs  pantry.rs  phase6_slice.rs  products.rs  quotas.rs  recipes.rs  reminders.rs  replenishment.rs  request_ids.rs  stock_lifecycle.rs  suppliers.rs
crates/qm-api/tests/support/: mod.rs  off_http.rs
crates/qm-core/: Cargo.toml
crates/qm-core/src/: batch.rs  errors.rs  lib.rs  units.rs
crates/qm-db/: Cargo.toml
crates/qm-db/migrations/: 0001_init.sql  0002_product_family.sql  0003_stock_event_log.sql  0004_auth_token_sessions.sql  0005_invite_revocation.sql  0006_auth_sessions_active_household.sql  0007_auth_session_sweep_indexes.sql  0008_stock_reminder.sql  0009_household_timezones_and_reminder_state.sql  0010_reminder_device_delivery.sql  0011_reminder_delivery_channels.sql  0012_device_local_reminder_dismissal.sql  0013_user_email_verification.sql  0014_label_printer.sql  0015_stock_batch_produced_on.sql  0016_product_package_size.sql  0017_stock_package_size_snapshot.sql  0018_product_max_open_days.sql  0019_product_package_size_local_override.sql  0020_off_contributions.sql  0021_password_reset.sql  0022_off_family_local_override.sql  0023_storage_vessels.sql  0024_household_measurement_system.sql  0025_hosted_tenant_identity.sql  0026_background_jobs.sql  0027_household_data_lifecycle.sql  0028_barcode_cache_household_primary_key.sql  0029_billing_accounts_and_quota_indexes.sql  0030_passkeys.sql  0031_auth_handoff.sql  0032_label_printer_delivery.sql  0033_stock_split_repack.sql  0034_ingredients.sql  0035_recipes.sql  0036_recipe_execution.sql  0037_ai_tasks.sql  0038_pantry_suggestions.sql  0039_supplier_foundations.sql  0040_replenishment_automation.sql  (+1 more)
crates/qm-db/src/: ai_tasks.rs  auth_handoff.rs  auth_sessions.rs  barcode_cache.rs  billing.rs  devices.rs  household_exports.rs  households.rs  ingredients.rs  invites.rs  jobs.rs  label_printers.rs  lib.rs  locations.rs  meal_plans.rs  memberships.rs  off_credentials.rs  pantry_suggestions.rs  passkeys.rs  products.rs  quotas.rs  recipes.rs  reminders.rs  replenishment.rs  stock.rs  stock_events.rs  storage_vessels.rs  suppliers.rs  test_support.rs  time.rs  tokens.rs  users.rs
crates/qm-server/: Cargo.toml
crates/qm-server/src/: email.rs  main.rs  metrics.rs  push.rs  worker.rs
crates/qm-suppliers/: Cargo.toml
crates/qm-suppliers/src/: lib.rs
docker/: entrypoint.sh
docs/: authenticated-mobile-pairing.md  hosted-reminders.md  recipe-execution-client-experience.md  supplier-cart-review-client-experience.md  supplier-integration-foundations.md
docs/brand/: quartermaster-logo-preview.html
ios/: ExportOptions.plist  Gemfile  README.md  project.yml
ios/Config/: Debug.xcconfig  Release.xcconfig
ios/Quartermaster/: Localizable.strings  Quartermaster.entitlements  QuartermasterRelease.entitlements  openapi-generator-config.yaml  openapi.json
ios/Quartermaster/App/: AppRoot.swift  AppState.swift  QuartermasterApp.swift  UITestFixture.swift
ios/Quartermaster/Core/Auth/: AuthCapabilities.swift  PasskeyAuthenticator.swift  TokenStore.swift
ios/Quartermaster/Core/Networking/: APIAliases.swift  APIClient.swift  APIDTOs.swift  APIError.swift  APIOverrides.swift  AnyJSON.swift  LabelPrinterClient.swift  ServerConfig.swift
ios/Quartermaster/DesignSystem/: Brand.swift  DecimalField.swift  ValidatedURLField.swift
ios/Quartermaster/Features/AddStock/: AddStockView.swift  ExpiryDateParser.swift  ExpiryDateScannerView.swift  ManualProductForm.swift  ProductSearchView.swift
ios/QuartermasterTests/: AppStateReminderTests.swift  ExpiryDateParserTests.swift
ios/QuartermasterUITests/: AppStoreScreenshotUITests.swift  DepletedInventoryUITests.swift
ios/fastlane/: Appfile  Fastfile  app_privacy_details.json
ios/fastlane/metadata/: copyright.txt
ios/scripts/: archive-app.sh  build-app.sh  capture-app-store-screenshots.sh  generate-release-config.sh  install-device.sh  list-signing-profiles.sh  validate-release-config.sh
scripts/: update-ha-app-repo.sh
web/: .prettierignore  openapi-ts.config.ts  package.json  playwright.config.ts  svelte.config.js
web/src/: app.html
web/src/lib/: api.test.ts  api.ts  inventory.test.ts  inventory.ts  join.test.ts  join.ts  locations.test.ts  locations.ts  paths.ts  phase8.ts  products.test.ts  products.ts  reminder-messages.ts  reminders.test.ts  reminders.ts  session-core.test.ts  session-core.ts
web/src/routes/: +page.svelte
web/src/styles/: app.css
web/tests/e2e/: web-smoke.spec.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+73 files in other folders)
