[workspace]
resolver = "2"
members = [
    "crates/qm-core",
    "crates/qm-db",
    "crates/qm-api",
    "crates/qm-server",
    "xtask",
]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jbg/quartermaster"
authors = ["Quartermaster contributors"]
rust-version = "1.90"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "request-id"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"

# data
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "any",
    "sqlite",
    "postgres",
    "uuid",
    "json",
] }
uuid = { version = "1", features = ["v7", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# auth / crypto
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"

# http client (OpenFoodFacts)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }

# openapi
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# observability
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# errors
thiserror = "2"
anyhow = "1"

# config
figment = { version = "0.10", features = ["env", "toml"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
