[workspace]
resolver = "2"
members = [
    "crates/qm-core",
    "crates/qm-db",
    "crates/qm-api",
    "crates/qm-server",
    "xtask",
]

[workspace.package]
version = "1.6.2"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/jbg/quartermaster"
authors = ["Quartermaster contributors"]
rust-version = "1.90"
publish = false

[workspace.dependencies]
# async
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = [] }

# web
axum = { version = "0.8", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
] }
tower = { version = "0.5", default-features = false, features = [] }
tower-http = { version = "0.6", default-features = false, features = [
    "fs",
    "trace",
    "cors",
    "request-id",
] }

# serialization
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
percent-encoding = { version = "2", default-features = false, features = ["std"] }

# data
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "any",
    "sqlite",
    "postgres",
    "uuid",
    "json",
] }
uuid = { version = "1", default-features = false, features = ["std", "v7", "serde"] }
jiff = { version = "0.2", default-features = false, features = [
    "std",
    "tz-system",
    "tz-fat",
    "tzdb-bundle-platform",
    "tzdb-zoneinfo",
    "tzdb-concatenated",
    "perf-inline",
    "serde",
] }
rust_decimal = { version = "1", default-features = false, features = ["serde", "std"] }

# auth / crypto
argon2 = { version = "0.5", default-features = false, features = [
    "alloc",
    "password-hash",
    "rand",
] }
rand = { version = "0.9", default-features = false, features = [
    "std",
    "std_rng",
    "os_rng",
    "small_rng",
    "thread_rng",
] }
sha2 = { version = "0.11", default-features = false, features = ["alloc", "oid"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }

# http client (OpenFoodFacts)
reqwest = { version = "0.12", default-features = false, features = [
    "default-tls",
    "charset",
    "http2",
    "system-proxy",
    "json",
    "rustls-tls",
] }
backon = { version = "1.6", default-features = false, features = [
    "std",
    "std-blocking-sleep",
    "tokio-sleep",
    "gloo-timers-sleep",
] }

# openapi
utoipa = { version = "5", default-features = false, features = [
    "macros",
    "axum_extras",
    "uuid",
] }
utoipa-swagger-ui = { version = "8", default-features = false, features = ["url", "axum"] }

# observability
metrics = { version = "0.24", default-features = false, features = [] }
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = [
    "http-listener",
    "push-gateway",
] }
socket2 = { version = "0.6", default-features = false, features = [] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "tracing-log",
    "std",
    "env-filter",
    "json",
] }

# errors
thiserror = { version = "2", default-features = false, features = ["std"] }
anyhow = { version = "1", default-features = false, features = ["std"] }

# config
figment = { version = "0.10", default-features = false, features = ["env", "toml"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
