[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
qm-api = { path = "../crates/qm-api" }

anyhow.workspace = true
serde_json.workspace = true
utoipa.workspace = true
