[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
qm-api = { path = "../crates/qm-api" }
qm-db = { path = "../crates/qm-db" }

anyhow.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
