[package]
name = "qm-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qm-core = { path = "../qm-core" }
qm-db = { path = "../qm-db" }

anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
backoff.workspace = true
base64.workspace = true
jiff.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
qm-db = { path = "../qm-db", features = ["test-support"] }
reqwest.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
