[package]
name = "qm-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-support = ["dep:anyhow", "dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
qm-core = { path = "../qm-core" }

anyhow = { workspace = true, optional = true }
jiff.workspace = true
rust_decimal.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
testcontainers = { version = "0.24", optional = true }
testcontainers-modules = { version = "0.12", features = ["postgres"], optional = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
jiff.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
