[package]
name = "qm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "qm-server"
path = "src/main.rs"

[dependencies]
qm-api = { path = "../qm-api" }
qm-core = { path = "../qm-core" }
qm-db = { path = "../qm-db" }

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
backoff.workspace = true
figment.workspace = true
jiff.workspace = true
jsonwebtoken = "9"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
qm-db = { path = "../qm-db", features = ["test-support"] }
serde_json.workspace = true
sqlx.workspace = true
tower.workspace = true
uuid.workspace = true
