[package]
name = "qm-suppliers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
serde_json = { workspace = true, default-features = false, features = ["std"] }
thiserror = { workspace = true, default-features = false, features = ["std"] }
tokio = { workspace = true, default-features = false, features = ["sync"] }
uuid = { workspace = true, default-features = false, features = ["std", "v7", "serde"] }
